src/style.css
:root{
    font-size: 16px;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    --menu-font: 'Copperplate', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}
html{
    padding: 0px;
    margin: 0px;
}
body{
    background-color: #E5E4E2;
    padding: 0px;
    margin: 0px;
}
#content{
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}
nav{
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 10vh;
    position: fixed;
    width: 100vw;
    background-color: white;
    padding: 0px 10px;
    box-shadow: 0px 5px 5px grey;
}
#logo{
    font-family: 'Lobster', fantasy, sans-serif;
    font-size: 1.5rem;
}
ul{
    display: flex;
    gap: 20px;
    margin-right: 20px;
}
nav ul li{
    list-style-type: none;
    font-family: var(--menu-font);
}
nav ul li:hover{
    border-bottom: solid 2px #FFA836;
}
#home-content{
    align-self: center;
    display: grid;
    height: 40vh;
    width: 80%;
    grid-template-columns: 1.5fr 1fr;
    grid-template-rows: 1fr 5fr;
    background-color: #FFF;
    box-shadow: 0px 0px 5px grey;
    padding-left: 10px;
    border-radius: 15px;
}
#home-content > div:first-child{
    grid-row: 1 / 2;
    grid-column: 1 / 2;
    font-family: 'Lobster', fantasy, sans-serif;
}
#home-content > div:nth-child(2){
    grid-row: 1 / 3;
    grid-column: 2 / 3;
}
#home-content > div:nth-child(3){
    grid-row: 2 / 3;
    grid-column: 1 / 2;
    overflow-y: auto;
}

